# distribution-generator

./: README.md  example.ipynb  pyproject.toml
distribution_generator/: distributions.py  evolution_lib.py
