[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distribution_generator"
version = "0.0.1"
authors = [
  { name="Alberto Foresti", email="alberto.foresti@eurecom.fr" },
]
description = "A small package that generates discrete distributions using an evolutionary strategy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2",
    "scipy",
    "tqdm"
]


[project.urls]
Homepage = "https://github.com/AlbertoForesti/distribution-generator"
Issues = "https://github.com/AlbertoForesti/distribution-generator/issues"

[tool.black]
line-length = 88
target-version = ["py39", "py38", "py37", "py36", "py35"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["distribution_generator"]

[tool.hatch.metadata]
allow-direct-references = true